# cpp_starter

./: .gitignore  CMakeLists.txt  CMakeSettings.json  CPackConfig.cmake  Dockerfile  Dockerfile.alpine  Dockerfile.fedora  LICENSE  README.md  build.sh  clean.sh  configure.sh  requirements.txt  run.sh  run_tests.sh  vcpkg.json
.devcontainer/: devcontainer.json
docker/: Dockerfile.alpine
include/lib_a_dir/: adder.h  cuda_functions.h  helpers.h  pch.h  plotting.h
include/lib_b_dir/: subtractor.h
scripts/: SetupPythonEnv.cmake  build.sh  clean.sh  configure.sh  lineplot.py  myplot.py  run.sh  run_tests.sh
src/: CMakeLists.txt
src/console/: main.cpp
src/lib_a_src/: adder.cpp  helpers.cpp  kernel.cu  plotting.cpp
src/lib_b_src/: subtractor.cpp
src/proto/: plot.proto
tests/: CMakeLists.txt  main.cpp  some_test.cpp
